still errors with ascribing correct values to atoms

--- a/examples/annotate/Annotate_3D.ipynb
+++ b/examples/annotate/Annotate_3D.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 58,
    "id": "59d34704",
    "metadata": {},
    "outputs": [
@@ -11,7 +11,7 @@
      "output_type": "stream",
      "text": [
       "2021.03.4\n",
-      "Sat Aug  7 23:16:19 2021\n"
+      "Sun Aug  8 16:45:26 2021\n"
      ]
     }
    ],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 70,
    "id": "5b662217",
    "metadata": {},
    "outputs": [
@@ -50,8 +50,8 @@
      "output_type": "stream",
      "text": [
       "[<chemml.chem.Molecule(\n",
-      "        rdkit_molecule : <rdkit.Chem.rdchem.Mol object at 0x7f145f747e40>,\n",
-      "        pybel_molecule : <openbabel.pybel.Molecule object at 0x7f14a01df110>,\n",
+      "        rdkit_molecule : <rdkit.Chem.rdchem.Mol object at 0x7f145f6d30d0>,\n",
+      "        pybel_molecule : <openbabel.pybel.Molecule object at 0x7f145f6d54d0>,\n",
       "        creator        : ('XYZ', 'dichloropyridine26_q+0.xyz'),\n",
       "        smiles         : 'Clc1cccc(Cl)n1',\n",
       "        smarts         : None,\n",
@@ -68,10 +68,10 @@
     },
     {
      "data": {
-      "application/3dmoljs_load.v0": "<div id=\"3dmolviewer_16283948974532712\"  style=\"position: relative; width: 500px; height: 500px\">\n        <p id=\"3dmolwarning_16283948974532712\" style=\"background-color:#ffcccc;color:black\">You appear to be running in JupyterLab (or JavaScript failed to load for some other reason).  You need to install the 3dmol extension: <br>\n        <tt>jupyter labextension install jupyterlab_3dmol</tt></p>\n        </div>\n<script>\n\nvar loadScriptAsync = function(uri){\n  return new Promise((resolve, reject) => {\n    var tag = document.createElement('script');\n    tag.src = uri;\n    tag.async = true;\n    tag.onload = () => {\n      resolve();\n    };\n  var firstScriptTag = document.getElementsByTagName('script')[0];\n  firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);\n});\n};\n\nif(typeof $3Dmolpromise === 'undefined') {\n$3Dmolpromise = null;\n  $3Dmolpromise = loadScriptAsync('https://3dmol.org/build/3Dmol.js');\n}\n\nvar viewer_16283948974532712 = null;\nvar warn = document.getElementById(\"3dmolwarning_16283948974532712\");\nif(warn) {\n    warn.parentNode.removeChild(warn);\n}\n$3Dmolpromise.then(function() {\nviewer_16283948974532712 = $3Dmol.createViewer($(\"#3dmolviewer_16283948974532712\"),{backgroundColor:\"white\"});\nviewer_16283948974532712.zoomTo();\n\tviewer_16283948974532712.addModel(\"\\n     RDKit          3D\\n\\n 11 11  0  0  0  0  0  0  0  0999 V2000\\n    2.7833   -1.4284    0.0799 Cl  0  0  0  0  0  0  0  0  0  0  0  0\\n    1.2380   -0.6858    0.0350 C   0  0  0  0  0  0  0  0  0  0  0  0\\n    1.1171    0.6956    0.0443 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -0.1631    1.2394    0.0065 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -1.2591    0.3833   -0.0387 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -1.0184   -0.9824   -0.0438 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -2.3190   -2.0991   -0.0983 Cl  0  0  0  0  0  0  0  0  0  0  0  0\\n    0.2034   -1.5454   -0.0081 N   0  0  0  0  0  0  0  0  0  0  0  0\\n    1.9935    1.3333    0.0800 H   0  0  0  0  0  0  0  0  0  0  0  0\\n   -0.3050    2.3168    0.0121 H   0  0  0  0  0  0  0  0  0  0  0  0\\n   -2.2707    0.7727   -0.0690 H   0  0  0  0  0  0  0  0  0  0  0  0\\n  1  2  1  0\\n  2  3  2  0\\n  3  4  1  0\\n  4  5  2  0\\n  5  6  1  0\\n  6  7  1  0\\n  6  8  2  0\\n  8  2  1  0\\n  3  9  1  0\\n  4 10  1  0\\n  5 11  1  0\\nM  END\\n\",\"mol\");\n\tviewer_16283948974532712.setStyle({\"stick\": {\"backgroundColor\": \"#000000\"}});\n\tviewer_16283948974532712.zoomTo();\nviewer_16283948974532712.render();\n});\n</script>",
+      "application/3dmoljs_load.v0": "<div id=\"3dmolviewer_1628466241908018\"  style=\"position: relative; width: 500px; height: 500px\">\n        <p id=\"3dmolwarning_1628466241908018\" style=\"background-color:#ffcccc;color:black\">You appear to be running in JupyterLab (or JavaScript failed to load for some other reason).  You need to install the 3dmol extension: <br>\n        <tt>jupyter labextension install jupyterlab_3dmol</tt></p>\n        </div>\n<script>\n\nvar loadScriptAsync = function(uri){\n  return new Promise((resolve, reject) => {\n    var tag = document.createElement('script');\n    tag.src = uri;\n    tag.async = true;\n    tag.onload = () => {\n      resolve();\n    };\n  var firstScriptTag = document.getElementsByTagName('script')[0];\n  firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);\n});\n};\n\nif(typeof $3Dmolpromise === 'undefined') {\n$3Dmolpromise = null;\n  $3Dmolpromise = loadScriptAsync('https://3dmol.org/build/3Dmol.js');\n}\n\nvar viewer_1628466241908018 = null;\nvar warn = document.getElementById(\"3dmolwarning_1628466241908018\");\nif(warn) {\n    warn.parentNode.removeChild(warn);\n}\n$3Dmolpromise.then(function() {\nviewer_1628466241908018 = $3Dmol.createViewer($(\"#3dmolviewer_1628466241908018\"),{backgroundColor:\"white\"});\nviewer_1628466241908018.zoomTo();\n\tviewer_1628466241908018.addModel(\"\\n     RDKit          3D\\n\\n 11 11  0  0  0  0  0  0  0  0999 V2000\\n    2.7090   -1.7275    0.2689 Cl  0  0  0  0  0  0  0  0  0  0  0  0\\n    1.1844   -0.8453    0.1222 C   0  0  0  0  0  0  0  0  0  0  0  0\\n    1.1931    0.5242    0.0523 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -0.0108    1.2230   -0.0637 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -1.1898    0.5216   -0.1059 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -1.1610   -0.8496   -0.0334 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -2.6658   -1.7262   -0.0883 Cl  0  0  0  0  0  0  0  0  0  0  0  0\\n    0.0128   -1.5233    0.0792 N   0  0  0  0  0  0  0  0  0  0  0  0\\n    2.1037    1.0917    0.0836 H   0  0  0  0  0  0  0  0  0  0  0  0\\n   -0.0425    2.2988   -0.1211 H   0  0  0  0  0  0  0  0  0  0  0  0\\n   -2.1331    1.0126   -0.1939 H   0  0  0  0  0  0  0  0  0  0  0  0\\n  1  2  1  0\\n  2  3  2  0\\n  3  4  1  0\\n  4  5  2  0\\n  5  6  1  0\\n  6  7  1  0\\n  6  8  2  0\\n  8  2  1  0\\n  3  9  1  0\\n  4 10  1  0\\n  5 11  1  0\\nM  END\\n\",\"mol\");\n\tviewer_1628466241908018.setStyle({\"stick\": {\"backgroundColor\": \"#000000\"}});\n\tviewer_1628466241908018.zoomTo();\nviewer_1628466241908018.render();\n});\n</script>",
       "text/html": [
-       "<div id=\"3dmolviewer_16283948974532712\"  style=\"position: relative; width: 500px; height: 500px\">\n",
-       "        <p id=\"3dmolwarning_16283948974532712\" style=\"background-color:#ffcccc;color:black\">You appear to be running in JupyterLab (or JavaScript failed to load for some other reason).  You need to install the 3dmol extension: <br>\n",
+       "<div id=\"3dmolviewer_1628466241908018\"  style=\"position: relative; width: 500px; height: 500px\">\n",
+       "        <p id=\"3dmolwarning_1628466241908018\" style=\"background-color:#ffcccc;color:black\">You appear to be running in JupyterLab (or JavaScript failed to load for some other reason).  You need to install the 3dmol extension: <br>\n",
        "        <tt>jupyter labextension install jupyterlab_3dmol</tt></p>\n",
        "        </div>\n",
        "<script>\n",
@@ -94,18 +94,18 @@
        "  $3Dmolpromise = loadScriptAsync('https://3dmol.org/build/3Dmol.js');\n",
        "}\n",
        "\n",
-       "var viewer_16283948974532712 = null;\n",
-       "var warn = document.getElementById(\"3dmolwarning_16283948974532712\");\n",
+       "var viewer_1628466241908018 = null;\n",
+       "var warn = document.getElementById(\"3dmolwarning_1628466241908018\");\n",
        "if(warn) {\n",
        "    warn.parentNode.removeChild(warn);\n",
        "}\n",
        "$3Dmolpromise.then(function() {\n",
-       "viewer_16283948974532712 = $3Dmol.createViewer($(\"#3dmolviewer_16283948974532712\"),{backgroundColor:\"white\"});\n",
-       "viewer_16283948974532712.zoomTo();\n",
-       "\tviewer_16283948974532712.addModel(\"\\n     RDKit          3D\\n\\n 11 11  0  0  0  0  0  0  0  0999 V2000\\n    2.7833   -1.4284    0.0799 Cl  0  0  0  0  0  0  0  0  0  0  0  0\\n    1.2380   -0.6858    0.0350 C   0  0  0  0  0  0  0  0  0  0  0  0\\n    1.1171    0.6956    0.0443 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -0.1631    1.2394    0.0065 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -1.2591    0.3833   -0.0387 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -1.0184   -0.9824   -0.0438 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -2.3190   -2.0991   -0.0983 Cl  0  0  0  0  0  0  0  0  0  0  0  0\\n    0.2034   -1.5454   -0.0081 N   0  0  0  0  0  0  0  0  0  0  0  0\\n    1.9935    1.3333    0.0800 H   0  0  0  0  0  0  0  0  0  0  0  0\\n   -0.3050    2.3168    0.0121 H   0  0  0  0  0  0  0  0  0  0  0  0\\n   -2.2707    0.7727   -0.0690 H   0  0  0  0  0  0  0  0  0  0  0  0\\n  1  2  1  0\\n  2  3  2  0\\n  3  4  1  0\\n  4  5  2  0\\n  5  6  1  0\\n  6  7  1  0\\n  6  8  2  0\\n  8  2  1  0\\n  3  9  1  0\\n  4 10  1  0\\n  5 11  1  0\\nM  END\\n\",\"mol\");\n",
-       "\tviewer_16283948974532712.setStyle({\"stick\": {\"backgroundColor\": \"#000000\"}});\n",
-       "\tviewer_16283948974532712.zoomTo();\n",
-       "viewer_16283948974532712.render();\n",
+       "viewer_1628466241908018 = $3Dmol.createViewer($(\"#3dmolviewer_1628466241908018\"),{backgroundColor:\"white\"});\n",
+       "viewer_1628466241908018.zoomTo();\n",
+       "\tviewer_1628466241908018.addModel(\"\\n     RDKit          3D\\n\\n 11 11  0  0  0  0  0  0  0  0999 V2000\\n    2.7090   -1.7275    0.2689 Cl  0  0  0  0  0  0  0  0  0  0  0  0\\n    1.1844   -0.8453    0.1222 C   0  0  0  0  0  0  0  0  0  0  0  0\\n    1.1931    0.5242    0.0523 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -0.0108    1.2230   -0.0637 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -1.1898    0.5216   -0.1059 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -1.1610   -0.8496   -0.0334 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -2.6658   -1.7262   -0.0883 Cl  0  0  0  0  0  0  0  0  0  0  0  0\\n    0.0128   -1.5233    0.0792 N   0  0  0  0  0  0  0  0  0  0  0  0\\n    2.1037    1.0917    0.0836 H   0  0  0  0  0  0  0  0  0  0  0  0\\n   -0.0425    2.2988   -0.1211 H   0  0  0  0  0  0  0  0  0  0  0  0\\n   -2.1331    1.0126   -0.1939 H   0  0  0  0  0  0  0  0  0  0  0  0\\n  1  2  1  0\\n  2  3  2  0\\n  3  4  1  0\\n  4  5  2  0\\n  5  6  1  0\\n  6  7  1  0\\n  6  8  2  0\\n  8  2  1  0\\n  3  9  1  0\\n  4 10  1  0\\n  5 11  1  0\\nM  END\\n\",\"mol\");\n",
+       "\tviewer_1628466241908018.setStyle({\"stick\": {\"backgroundColor\": \"#000000\"}});\n",
+       "\tviewer_1628466241908018.zoomTo();\n",
+       "viewer_1628466241908018.render();\n",
        "});\n",
        "</script>"
       ]
@@ -146,8 +146,6 @@
     "\n",
     "def Visualize3D(mol, size=(300,300), style='sphere', surface=False, backgroundColor='#000000'):\n",
     "    molBlock = Chem.MolToMolBlock(mol) \n",
-    "    \n",
-    "    \n",
     "    view = py3Dmol.view(width=size[0], height=size[1])\n",
     "    view.addModel(molBlock, 'mol')\n",
     "    view.setStyle({style:{'backgroundColor':'#000000'}})\n",
@@ -159,9 +157,8 @@
     "    if mol is not None: \n",
     "            mol = Chem.AddHs(mol)\n",
     "            AllChem.EmbedMolecule(mol)\n",
-    "            AllChem.MMFFOptimizeMolecule(mol,maxIters=250)\n",
     "            for atom in mol.GetAtoms():\n",
-    "                atom.SetProp(\"atomNote\", str(atom.GetIdx()+1))\n",
+    "                atom.SetProp(\"atomNote\", str(atom.GetIdx()))\n",
     "            return mol\n",
     "    else:\n",
     "        return None \n",
@@ -172,8 +169,12 @@
     "print(smiles)\n",
     "\n",
     "molProcessed = SmilesSetup(smiles)\n",
+    "for atom in molProcessed.GetAtoms():\n",
+    "    atom.SetProp(\"atomNote\", str(atom.GetIdx()))\n",
     "\n",
     "view = Visualize3D(molProcessed,size=(500,500), style='stick', surface=True)\n",
+    "\n",
+    "    \n",
     "view.show()\n",
     "\n",
     "print(\" \")\n",
@@ -184,6 +185,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0bf6f306",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6ec1b7a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5b726bb",
    "metadata": {},
    "outputs": [],
    "source": []
