--- a/examples/annotate/Annotate_3D.ipynb
+++ b/examples/annotate/Annotate_3D.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 71,
    "id": "5b662217",
    "metadata": {},
    "outputs": [
@@ -50,8 +50,8 @@
      "output_type": "stream",
      "text": [
       "[<chemml.chem.Molecule(\n",
-      "        rdkit_molecule : <rdkit.Chem.rdchem.Mol object at 0x7f145f6d30d0>,\n",
-      "        pybel_molecule : <openbabel.pybel.Molecule object at 0x7f145f6d54d0>,\n",
+      "        rdkit_molecule : <rdkit.Chem.rdchem.Mol object at 0x7f145f6d3c10>,\n",
+      "        pybel_molecule : <openbabel.pybel.Molecule object at 0x7f145f6d5c10>,\n",
       "        creator        : ('XYZ', 'dichloropyridine26_q+0.xyz'),\n",
       "        smiles         : 'Clc1cccc(Cl)n1',\n",
       "        smarts         : None,\n",
@@ -68,10 +68,10 @@
     },
     {
      "data": {
-      "application/3dmoljs_load.v0": "<div id=\"3dmolviewer_1628466241908018\"  style=\"position: relative; width: 500px; height: 500px\">\n        <p id=\"3dmolwarning_1628466241908018\" style=\"background-color:#ffcccc;color:black\">You appear to be running in JupyterLab (or JavaScript failed to load for some other reason).  You need to install the 3dmol extension: <br>\n        <tt>jupyter labextension install jupyterlab_3dmol</tt></p>\n        </div>\n<script>\n\nvar loadScriptAsync = function(uri){\n  return new Promise((resolve, reject) => {\n    var tag = document.createElement('script');\n    tag.src = uri;\n    tag.async = true;\n    tag.onload = () => {\n      resolve();\n    };\n  var firstScriptTag = document.getElementsByTagName('script')[0];\n  firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);\n});\n};\n\nif(typeof $3Dmolpromise === 'undefined') {\n$3Dmolpromise = null;\n  $3Dmolpromise = loadScriptAsync('https://3dmol.org/build/3Dmol.js');\n}\n\nvar viewer_1628466241908018 = null;\nvar warn = document.getElementById(\"3dmolwarning_1628466241908018\");\nif(warn) {\n    warn.parentNode.removeChild(warn);\n}\n$3Dmolpromise.then(function() {\nviewer_1628466241908018 = $3Dmol.createViewer($(\"#3dmolviewer_1628466241908018\"),{backgroundColor:\"white\"});\nviewer_1628466241908018.zoomTo();\n\tviewer_1628466241908018.addModel(\"\\n     RDKit          3D\\n\\n 11 11  0  0  0  0  0  0  0  0999 V2000\\n    2.7090   -1.7275    0.2689 Cl  0  0  0  0  0  0  0  0  0  0  0  0\\n    1.1844   -0.8453    0.1222 C   0  0  0  0  0  0  0  0  0  0  0  0\\n    1.1931    0.5242    0.0523 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -0.0108    1.2230   -0.0637 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -1.1898    0.5216   -0.1059 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -1.1610   -0.8496   -0.0334 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -2.6658   -1.7262   -0.0883 Cl  0  0  0  0  0  0  0  0  0  0  0  0\\n    0.0128   -1.5233    0.0792 N   0  0  0  0  0  0  0  0  0  0  0  0\\n    2.1037    1.0917    0.0836 H   0  0  0  0  0  0  0  0  0  0  0  0\\n   -0.0425    2.2988   -0.1211 H   0  0  0  0  0  0  0  0  0  0  0  0\\n   -2.1331    1.0126   -0.1939 H   0  0  0  0  0  0  0  0  0  0  0  0\\n  1  2  1  0\\n  2  3  2  0\\n  3  4  1  0\\n  4  5  2  0\\n  5  6  1  0\\n  6  7  1  0\\n  6  8  2  0\\n  8  2  1  0\\n  3  9  1  0\\n  4 10  1  0\\n  5 11  1  0\\nM  END\\n\",\"mol\");\n\tviewer_1628466241908018.setStyle({\"stick\": {\"backgroundColor\": \"#000000\"}});\n\tviewer_1628466241908018.zoomTo();\nviewer_1628466241908018.render();\n});\n</script>",
+      "application/3dmoljs_load.v0": "<div id=\"3dmolviewer_16285168162437532\"  style=\"position: relative; width: 500px; height: 500px\">\n        <p id=\"3dmolwarning_16285168162437532\" style=\"background-color:#ffcccc;color:black\">You appear to be running in JupyterLab (or JavaScript failed to load for some other reason).  You need to install the 3dmol extension: <br>\n        <tt>jupyter labextension install jupyterlab_3dmol</tt></p>\n        </div>\n<script>\n\nvar loadScriptAsync = function(uri){\n  return new Promise((resolve, reject) => {\n    var tag = document.createElement('script');\n    tag.src = uri;\n    tag.async = true;\n    tag.onload = () => {\n      resolve();\n    };\n  var firstScriptTag = document.getElementsByTagName('script')[0];\n  firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);\n});\n};\n\nif(typeof $3Dmolpromise === 'undefined') {\n$3Dmolpromise = null;\n  $3Dmolpromise = loadScriptAsync('https://3dmol.org/build/3Dmol.js');\n}\n\nvar viewer_16285168162437532 = null;\nvar warn = document.getElementById(\"3dmolwarning_16285168162437532\");\nif(warn) {\n    warn.parentNode.removeChild(warn);\n}\n$3Dmolpromise.then(function() {\nviewer_16285168162437532 = $3Dmol.createViewer($(\"#3dmolviewer_16285168162437532\"),{backgroundColor:\"white\"});\nviewer_16285168162437532.zoomTo();\n\tviewer_16285168162437532.addModel(\"\\n     RDKit          3D\\n\\n 11 11  0  0  0  0  0  0  0  0999 V2000\\n   -2.6571   -1.7453   -0.4462 Cl  0  0  0  0  0  0  0  0  0  0  0  0\\n   -1.1404   -0.8632   -0.2080 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -1.1933    0.5119   -0.0125 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -0.0173    1.2261    0.1765 C   0  0  0  0  0  0  0  0  0  0  0  0\\n    1.1784    0.5344    0.1631 C   0  0  0  0  0  0  0  0  0  0  0  0\\n    1.1712   -0.8324   -0.0355 C   0  0  0  0  0  0  0  0  0  0  0  0\\n    2.7116   -1.6917   -0.0481 Cl  0  0  0  0  0  0  0  0  0  0  0  0\\n    0.0345   -1.5198   -0.2178 N   0  0  0  0  0  0  0  0  0  0  0  0\\n   -2.1640    1.0075   -0.0113 H   0  0  0  0  0  0  0  0  0  0  0  0\\n   -0.0384    2.3118    0.3323 H   0  0  0  0  0  0  0  0  0  0  0  0\\n    2.1147    1.0608    0.3075 H   0  0  0  0  0  0  0  0  0  0  0  0\\n  1  2  1  0\\n  2  3  2  0\\n  3  4  1  0\\n  4  5  2  0\\n  5  6  1  0\\n  6  7  1  0\\n  6  8  2  0\\n  8  2  1  0\\n  3  9  1  0\\n  4 10  1  0\\n  5 11  1  0\\nM  END\\n\",\"mol\");\n\tviewer_16285168162437532.setStyle({\"stick\": {\"backgroundColor\": \"#000000\"}});\n\tviewer_16285168162437532.zoomTo();\nviewer_16285168162437532.render();\n});\n</script>",
       "text/html": [
-       "<div id=\"3dmolviewer_1628466241908018\"  style=\"position: relative; width: 500px; height: 500px\">\n",
-       "        <p id=\"3dmolwarning_1628466241908018\" style=\"background-color:#ffcccc;color:black\">You appear to be running in JupyterLab (or JavaScript failed to load for some other reason).  You need to install the 3dmol extension: <br>\n",
+       "<div id=\"3dmolviewer_16285168162437532\"  style=\"position: relative; width: 500px; height: 500px\">\n",
+       "        <p id=\"3dmolwarning_16285168162437532\" style=\"background-color:#ffcccc;color:black\">You appear to be running in JupyterLab (or JavaScript failed to load for some other reason).  You need to install the 3dmol extension: <br>\n",
        "        <tt>jupyter labextension install jupyterlab_3dmol</tt></p>\n",
        "        </div>\n",
        "<script>\n",
@@ -94,18 +94,18 @@
        "  $3Dmolpromise = loadScriptAsync('https://3dmol.org/build/3Dmol.js');\n",
        "}\n",
        "\n",
-       "var viewer_1628466241908018 = null;\n",
-       "var warn = document.getElementById(\"3dmolwarning_1628466241908018\");\n",
+       "var viewer_16285168162437532 = null;\n",
+       "var warn = document.getElementById(\"3dmolwarning_16285168162437532\");\n",
        "if(warn) {\n",
        "    warn.parentNode.removeChild(warn);\n",
        "}\n",
        "$3Dmolpromise.then(function() {\n",
-       "viewer_1628466241908018 = $3Dmol.createViewer($(\"#3dmolviewer_1628466241908018\"),{backgroundColor:\"white\"});\n",
-       "viewer_1628466241908018.zoomTo();\n",
-       "\tviewer_1628466241908018.addModel(\"\\n     RDKit          3D\\n\\n 11 11  0  0  0  0  0  0  0  0999 V2000\\n    2.7090   -1.7275    0.2689 Cl  0  0  0  0  0  0  0  0  0  0  0  0\\n    1.1844   -0.8453    0.1222 C   0  0  0  0  0  0  0  0  0  0  0  0\\n    1.1931    0.5242    0.0523 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -0.0108    1.2230   -0.0637 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -1.1898    0.5216   -0.1059 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -1.1610   -0.8496   -0.0334 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -2.6658   -1.7262   -0.0883 Cl  0  0  0  0  0  0  0  0  0  0  0  0\\n    0.0128   -1.5233    0.0792 N   0  0  0  0  0  0  0  0  0  0  0  0\\n    2.1037    1.0917    0.0836 H   0  0  0  0  0  0  0  0  0  0  0  0\\n   -0.0425    2.2988   -0.1211 H   0  0  0  0  0  0  0  0  0  0  0  0\\n   -2.1331    1.0126   -0.1939 H   0  0  0  0  0  0  0  0  0  0  0  0\\n  1  2  1  0\\n  2  3  2  0\\n  3  4  1  0\\n  4  5  2  0\\n  5  6  1  0\\n  6  7  1  0\\n  6  8  2  0\\n  8  2  1  0\\n  3  9  1  0\\n  4 10  1  0\\n  5 11  1  0\\nM  END\\n\",\"mol\");\n",
-       "\tviewer_1628466241908018.setStyle({\"stick\": {\"backgroundColor\": \"#000000\"}});\n",
-       "\tviewer_1628466241908018.zoomTo();\n",
-       "viewer_1628466241908018.render();\n",
+       "viewer_16285168162437532 = $3Dmol.createViewer($(\"#3dmolviewer_16285168162437532\"),{backgroundColor:\"white\"});\n",
+       "viewer_16285168162437532.zoomTo();\n",
+       "\tviewer_16285168162437532.addModel(\"\\n     RDKit          3D\\n\\n 11 11  0  0  0  0  0  0  0  0999 V2000\\n   -2.6571   -1.7453   -0.4462 Cl  0  0  0  0  0  0  0  0  0  0  0  0\\n   -1.1404   -0.8632   -0.2080 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -1.1933    0.5119   -0.0125 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -0.0173    1.2261    0.1765 C   0  0  0  0  0  0  0  0  0  0  0  0\\n    1.1784    0.5344    0.1631 C   0  0  0  0  0  0  0  0  0  0  0  0\\n    1.1712   -0.8324   -0.0355 C   0  0  0  0  0  0  0  0  0  0  0  0\\n    2.7116   -1.6917   -0.0481 Cl  0  0  0  0  0  0  0  0  0  0  0  0\\n    0.0345   -1.5198   -0.2178 N   0  0  0  0  0  0  0  0  0  0  0  0\\n   -2.1640    1.0075   -0.0113 H   0  0  0  0  0  0  0  0  0  0  0  0\\n   -0.0384    2.3118    0.3323 H   0  0  0  0  0  0  0  0  0  0  0  0\\n    2.1147    1.0608    0.3075 H   0  0  0  0  0  0  0  0  0  0  0  0\\n  1  2  1  0\\n  2  3  2  0\\n  3  4  1  0\\n  4  5  2  0\\n  5  6  1  0\\n  6  7  1  0\\n  6  8  2  0\\n  8  2  1  0\\n  3  9  1  0\\n  4 10  1  0\\n  5 11  1  0\\nM  END\\n\",\"mol\");\n",
+       "\tviewer_16285168162437532.setStyle({\"stick\": {\"backgroundColor\": \"#000000\"}});\n",
+       "\tviewer_16285168162437532.zoomTo();\n",
+       "viewer_16285168162437532.render();\n",
        "});\n",
        "</script>"
       ]
@@ -169,6 +169,7 @@
     "print(smiles)\n",
     "\n",
     "molProcessed = SmilesSetup(smiles)\n",
+    "\n",
     "for atom in molProcessed.GetAtoms():\n",
     "    atom.SetProp(\"atomNote\", str(atom.GetIdx()))\n",
     "\n",
@@ -192,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6ec1b7a",
+   "id": "494761d7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -200,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5b726bb",
+   "id": "1bf5bd53",
    "metadata": {},
    "outputs": [],
    "source": []
