--- a/examples/annotate/Annotate_3D.ipynb
+++ b/examples/annotate/Annotate_3D.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 72,
    "id": "59d34704",
    "metadata": {},
    "outputs": [
@@ -11,7 +11,7 @@
      "output_type": "stream",
      "text": [
       "2021.03.4\n",
-      "Sun Aug  8 16:45:26 2021\n"
+      "Mon Aug  9 11:03:35 2021\n"
      ]
     }
    ],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 73,
    "id": "5b662217",
    "metadata": {},
    "outputs": [
@@ -50,8 +50,8 @@
      "output_type": "stream",
      "text": [
       "[<chemml.chem.Molecule(\n",
-      "        rdkit_molecule : <rdkit.Chem.rdchem.Mol object at 0x7f145f6d3c10>,\n",
-      "        pybel_molecule : <openbabel.pybel.Molecule object at 0x7f145f6d5c10>,\n",
+      "        rdkit_molecule : <rdkit.Chem.rdchem.Mol object at 0x7f145f6cc760>,\n",
+      "        pybel_molecule : <openbabel.pybel.Molecule object at 0x7f145f6d5690>,\n",
       "        creator        : ('XYZ', 'dichloropyridine26_q+0.xyz'),\n",
       "        smiles         : 'Clc1cccc(Cl)n1',\n",
       "        smarts         : None,\n",
@@ -68,10 +68,10 @@
     },
     {
      "data": {
-      "application/3dmoljs_load.v0": "<div id=\"3dmolviewer_16285168162437532\"  style=\"position: relative; width: 500px; height: 500px\">\n        <p id=\"3dmolwarning_16285168162437532\" style=\"background-color:#ffcccc;color:black\">You appear to be running in JupyterLab (or JavaScript failed to load for some other reason).  You need to install the 3dmol extension: <br>\n        <tt>jupyter labextension install jupyterlab_3dmol</tt></p>\n        </div>\n<script>\n\nvar loadScriptAsync = function(uri){\n  return new Promise((resolve, reject) => {\n    var tag = document.createElement('script');\n    tag.src = uri;\n    tag.async = true;\n    tag.onload = () => {\n      resolve();\n    };\n  var firstScriptTag = document.getElementsByTagName('script')[0];\n  firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);\n});\n};\n\nif(typeof $3Dmolpromise === 'undefined') {\n$3Dmolpromise = null;\n  $3Dmolpromise = loadScriptAsync('https://3dmol.org/build/3Dmol.js');\n}\n\nvar viewer_16285168162437532 = null;\nvar warn = document.getElementById(\"3dmolwarning_16285168162437532\");\nif(warn) {\n    warn.parentNode.removeChild(warn);\n}\n$3Dmolpromise.then(function() {\nviewer_16285168162437532 = $3Dmol.createViewer($(\"#3dmolviewer_16285168162437532\"),{backgroundColor:\"white\"});\nviewer_16285168162437532.zoomTo();\n\tviewer_16285168162437532.addModel(\"\\n     RDKit          3D\\n\\n 11 11  0  0  0  0  0  0  0  0999 V2000\\n   -2.6571   -1.7453   -0.4462 Cl  0  0  0  0  0  0  0  0  0  0  0  0\\n   -1.1404   -0.8632   -0.2080 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -1.1933    0.5119   -0.0125 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -0.0173    1.2261    0.1765 C   0  0  0  0  0  0  0  0  0  0  0  0\\n    1.1784    0.5344    0.1631 C   0  0  0  0  0  0  0  0  0  0  0  0\\n    1.1712   -0.8324   -0.0355 C   0  0  0  0  0  0  0  0  0  0  0  0\\n    2.7116   -1.6917   -0.0481 Cl  0  0  0  0  0  0  0  0  0  0  0  0\\n    0.0345   -1.5198   -0.2178 N   0  0  0  0  0  0  0  0  0  0  0  0\\n   -2.1640    1.0075   -0.0113 H   0  0  0  0  0  0  0  0  0  0  0  0\\n   -0.0384    2.3118    0.3323 H   0  0  0  0  0  0  0  0  0  0  0  0\\n    2.1147    1.0608    0.3075 H   0  0  0  0  0  0  0  0  0  0  0  0\\n  1  2  1  0\\n  2  3  2  0\\n  3  4  1  0\\n  4  5  2  0\\n  5  6  1  0\\n  6  7  1  0\\n  6  8  2  0\\n  8  2  1  0\\n  3  9  1  0\\n  4 10  1  0\\n  5 11  1  0\\nM  END\\n\",\"mol\");\n\tviewer_16285168162437532.setStyle({\"stick\": {\"backgroundColor\": \"#000000\"}});\n\tviewer_16285168162437532.zoomTo();\nviewer_16285168162437532.render();\n});\n</script>",
+      "application/3dmoljs_load.v0": "<div id=\"3dmolviewer_16285214164436634\"  style=\"position: relative; width: 500px; height: 500px\">\n        <p id=\"3dmolwarning_16285214164436634\" style=\"background-color:#ffcccc;color:black\">You appear to be running in JupyterLab (or JavaScript failed to load for some other reason).  You need to install the 3dmol extension: <br>\n        <tt>jupyter labextension install jupyterlab_3dmol</tt></p>\n        </div>\n<script>\n\nvar loadScriptAsync = function(uri){\n  return new Promise((resolve, reject) => {\n    var tag = document.createElement('script');\n    tag.src = uri;\n    tag.async = true;\n    tag.onload = () => {\n      resolve();\n    };\n  var firstScriptTag = document.getElementsByTagName('script')[0];\n  firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);\n});\n};\n\nif(typeof $3Dmolpromise === 'undefined') {\n$3Dmolpromise = null;\n  $3Dmolpromise = loadScriptAsync('https://3dmol.org/build/3Dmol.js');\n}\n\nvar viewer_16285214164436634 = null;\nvar warn = document.getElementById(\"3dmolwarning_16285214164436634\");\nif(warn) {\n    warn.parentNode.removeChild(warn);\n}\n$3Dmolpromise.then(function() {\nviewer_16285214164436634 = $3Dmol.createViewer($(\"#3dmolviewer_16285214164436634\"),{backgroundColor:\"white\"});\nviewer_16285214164436634.zoomTo();\n\tviewer_16285214164436634.addModel(\"\\n     RDKit          3D\\n\\n 11 11  0  0  0  0  0  0  0  0999 V2000\\n   -2.6679   -1.8266    0.0837 Cl  0  0  0  0  0  0  0  0  0  0  0  0\\n   -1.1615   -0.9227    0.0349 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -1.1989    0.4599    0.0527 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -0.0327    1.2265    0.0157 C   0  0  0  0  0  0  0  0  0  0  0  0\\n    1.1826    0.5730   -0.0399 C   0  0  0  0  0  0  0  0  0  0  0  0\\n    1.1871   -0.8078   -0.0563 C   0  0  0  0  0  0  0  0  0  0  0  0\\n    2.7548   -1.5991   -0.1274 Cl  0  0  0  0  0  0  0  0  0  0  0  0\\n    0.0398   -1.5072   -0.0193 N   0  0  0  0  0  0  0  0  0  0  0  0\\n   -2.1586    0.9671    0.0965 H   0  0  0  0  0  0  0  0  0  0  0  0\\n   -0.0634    2.3142    0.0297 H   0  0  0  0  0  0  0  0  0  0  0  0\\n    2.1186    1.1227   -0.0703 H   0  0  0  0  0  0  0  0  0  0  0  0\\n  1  2  1  0\\n  2  3  2  0\\n  3  4  1  0\\n  4  5  2  0\\n  5  6  1  0\\n  6  7  1  0\\n  6  8  2  0\\n  8  2  1  0\\n  3  9  1  0\\n  4 10  1  0\\n  5 11  1  0\\nM  END\\n\",\"mol\");\n\tviewer_16285214164436634.setStyle({\"stick\": {\"backgroundColor\": \"#000000\"}});\n\tviewer_16285214164436634.zoomTo();\nviewer_16285214164436634.render();\n});\n</script>",
       "text/html": [
-       "<div id=\"3dmolviewer_16285168162437532\"  style=\"position: relative; width: 500px; height: 500px\">\n",
-       "        <p id=\"3dmolwarning_16285168162437532\" style=\"background-color:#ffcccc;color:black\">You appear to be running in JupyterLab (or JavaScript failed to load for some other reason).  You need to install the 3dmol extension: <br>\n",
+       "<div id=\"3dmolviewer_16285214164436634\"  style=\"position: relative; width: 500px; height: 500px\">\n",
+       "        <p id=\"3dmolwarning_16285214164436634\" style=\"background-color:#ffcccc;color:black\">You appear to be running in JupyterLab (or JavaScript failed to load for some other reason).  You need to install the 3dmol extension: <br>\n",
        "        <tt>jupyter labextension install jupyterlab_3dmol</tt></p>\n",
        "        </div>\n",
        "<script>\n",
@@ -94,18 +94,18 @@
        "  $3Dmolpromise = loadScriptAsync('https://3dmol.org/build/3Dmol.js');\n",
        "}\n",
        "\n",
-       "var viewer_16285168162437532 = null;\n",
-       "var warn = document.getElementById(\"3dmolwarning_16285168162437532\");\n",
+       "var viewer_16285214164436634 = null;\n",
+       "var warn = document.getElementById(\"3dmolwarning_16285214164436634\");\n",
        "if(warn) {\n",
        "    warn.parentNode.removeChild(warn);\n",
        "}\n",
        "$3Dmolpromise.then(function() {\n",
-       "viewer_16285168162437532 = $3Dmol.createViewer($(\"#3dmolviewer_16285168162437532\"),{backgroundColor:\"white\"});\n",
-       "viewer_16285168162437532.zoomTo();\n",
-       "\tviewer_16285168162437532.addModel(\"\\n     RDKit          3D\\n\\n 11 11  0  0  0  0  0  0  0  0999 V2000\\n   -2.6571   -1.7453   -0.4462 Cl  0  0  0  0  0  0  0  0  0  0  0  0\\n   -1.1404   -0.8632   -0.2080 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -1.1933    0.5119   -0.0125 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -0.0173    1.2261    0.1765 C   0  0  0  0  0  0  0  0  0  0  0  0\\n    1.1784    0.5344    0.1631 C   0  0  0  0  0  0  0  0  0  0  0  0\\n    1.1712   -0.8324   -0.0355 C   0  0  0  0  0  0  0  0  0  0  0  0\\n    2.7116   -1.6917   -0.0481 Cl  0  0  0  0  0  0  0  0  0  0  0  0\\n    0.0345   -1.5198   -0.2178 N   0  0  0  0  0  0  0  0  0  0  0  0\\n   -2.1640    1.0075   -0.0113 H   0  0  0  0  0  0  0  0  0  0  0  0\\n   -0.0384    2.3118    0.3323 H   0  0  0  0  0  0  0  0  0  0  0  0\\n    2.1147    1.0608    0.3075 H   0  0  0  0  0  0  0  0  0  0  0  0\\n  1  2  1  0\\n  2  3  2  0\\n  3  4  1  0\\n  4  5  2  0\\n  5  6  1  0\\n  6  7  1  0\\n  6  8  2  0\\n  8  2  1  0\\n  3  9  1  0\\n  4 10  1  0\\n  5 11  1  0\\nM  END\\n\",\"mol\");\n",
-       "\tviewer_16285168162437532.setStyle({\"stick\": {\"backgroundColor\": \"#000000\"}});\n",
-       "\tviewer_16285168162437532.zoomTo();\n",
-       "viewer_16285168162437532.render();\n",
+       "viewer_16285214164436634 = $3Dmol.createViewer($(\"#3dmolviewer_16285214164436634\"),{backgroundColor:\"white\"});\n",
+       "viewer_16285214164436634.zoomTo();\n",
+       "\tviewer_16285214164436634.addModel(\"\\n     RDKit          3D\\n\\n 11 11  0  0  0  0  0  0  0  0999 V2000\\n   -2.6679   -1.8266    0.0837 Cl  0  0  0  0  0  0  0  0  0  0  0  0\\n   -1.1615   -0.9227    0.0349 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -1.1989    0.4599    0.0527 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -0.0327    1.2265    0.0157 C   0  0  0  0  0  0  0  0  0  0  0  0\\n    1.1826    0.5730   -0.0399 C   0  0  0  0  0  0  0  0  0  0  0  0\\n    1.1871   -0.8078   -0.0563 C   0  0  0  0  0  0  0  0  0  0  0  0\\n    2.7548   -1.5991   -0.1274 Cl  0  0  0  0  0  0  0  0  0  0  0  0\\n    0.0398   -1.5072   -0.0193 N   0  0  0  0  0  0  0  0  0  0  0  0\\n   -2.1586    0.9671    0.0965 H   0  0  0  0  0  0  0  0  0  0  0  0\\n   -0.0634    2.3142    0.0297 H   0  0  0  0  0  0  0  0  0  0  0  0\\n    2.1186    1.1227   -0.0703 H   0  0  0  0  0  0  0  0  0  0  0  0\\n  1  2  1  0\\n  2  3  2  0\\n  3  4  1  0\\n  4  5  2  0\\n  5  6  1  0\\n  6  7  1  0\\n  6  8  2  0\\n  8  2  1  0\\n  3  9  1  0\\n  4 10  1  0\\n  5 11  1  0\\nM  END\\n\",\"mol\");\n",
+       "\tviewer_16285214164436634.setStyle({\"stick\": {\"backgroundColor\": \"#000000\"}});\n",
+       "\tviewer_16285214164436634.zoomTo();\n",
+       "viewer_16285214164436634.render();\n",
        "});\n",
        "</script>"
       ]
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "494761d7",
+   "id": "fe1c03fe",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bf5bd53",
+   "id": "89f11aa8",
    "metadata": {},
    "outputs": [],
    "source": []
