generic molecule name annotation

--- a/examples/annotate/Annotate_3D.ipynb
+++ b/examples/annotate/Annotate_3D.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 112,
    "id": "5b662217",
    "metadata": {},
    "outputs": [
@@ -50,8 +50,8 @@
      "output_type": "stream",
      "text": [
       "[<chemml.chem.Molecule(\n",
-      "        rdkit_molecule : <rdkit.Chem.rdchem.Mol object at 0x7f145f6cc760>,\n",
-      "        pybel_molecule : <openbabel.pybel.Molecule object at 0x7f145f6d5690>,\n",
+      "        rdkit_molecule : <rdkit.Chem.rdchem.Mol object at 0x7f145f6b9d00>,\n",
+      "        pybel_molecule : <openbabel.pybel.Molecule object at 0x7f14a58d4310>,\n",
       "        creator        : ('XYZ', 'dichloropyridine26_q+0.xyz'),\n",
       "        smiles         : 'Clc1cccc(Cl)n1',\n",
       "        smarts         : None,\n",
@@ -68,10 +68,10 @@
     },
     {
      "data": {
-      "application/3dmoljs_load.v0": "<div id=\"3dmolviewer_16285214164436634\"  style=\"position: relative; width: 500px; height: 500px\">\n        <p id=\"3dmolwarning_16285214164436634\" style=\"background-color:#ffcccc;color:black\">You appear to be running in JupyterLab (or JavaScript failed to load for some other reason).  You need to install the 3dmol extension: <br>\n        <tt>jupyter labextension install jupyterlab_3dmol</tt></p>\n        </div>\n<script>\n\nvar loadScriptAsync = function(uri){\n  return new Promise((resolve, reject) => {\n    var tag = document.createElement('script');\n    tag.src = uri;\n    tag.async = true;\n    tag.onload = () => {\n      resolve();\n    };\n  var firstScriptTag = document.getElementsByTagName('script')[0];\n  firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);\n});\n};\n\nif(typeof $3Dmolpromise === 'undefined') {\n$3Dmolpromise = null;\n  $3Dmolpromise = loadScriptAsync('https://3dmol.org/build/3Dmol.js');\n}\n\nvar viewer_16285214164436634 = null;\nvar warn = document.getElementById(\"3dmolwarning_16285214164436634\");\nif(warn) {\n    warn.parentNode.removeChild(warn);\n}\n$3Dmolpromise.then(function() {\nviewer_16285214164436634 = $3Dmol.createViewer($(\"#3dmolviewer_16285214164436634\"),{backgroundColor:\"white\"});\nviewer_16285214164436634.zoomTo();\n\tviewer_16285214164436634.addModel(\"\\n     RDKit          3D\\n\\n 11 11  0  0  0  0  0  0  0  0999 V2000\\n   -2.6679   -1.8266    0.0837 Cl  0  0  0  0  0  0  0  0  0  0  0  0\\n   -1.1615   -0.9227    0.0349 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -1.1989    0.4599    0.0527 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -0.0327    1.2265    0.0157 C   0  0  0  0  0  0  0  0  0  0  0  0\\n    1.1826    0.5730   -0.0399 C   0  0  0  0  0  0  0  0  0  0  0  0\\n    1.1871   -0.8078   -0.0563 C   0  0  0  0  0  0  0  0  0  0  0  0\\n    2.7548   -1.5991   -0.1274 Cl  0  0  0  0  0  0  0  0  0  0  0  0\\n    0.0398   -1.5072   -0.0193 N   0  0  0  0  0  0  0  0  0  0  0  0\\n   -2.1586    0.9671    0.0965 H   0  0  0  0  0  0  0  0  0  0  0  0\\n   -0.0634    2.3142    0.0297 H   0  0  0  0  0  0  0  0  0  0  0  0\\n    2.1186    1.1227   -0.0703 H   0  0  0  0  0  0  0  0  0  0  0  0\\n  1  2  1  0\\n  2  3  2  0\\n  3  4  1  0\\n  4  5  2  0\\n  5  6  1  0\\n  6  7  1  0\\n  6  8  2  0\\n  8  2  1  0\\n  3  9  1  0\\n  4 10  1  0\\n  5 11  1  0\\nM  END\\n\",\"mol\");\n\tviewer_16285214164436634.setStyle({\"stick\": {\"backgroundColor\": \"#000000\"}});\n\tviewer_16285214164436634.zoomTo();\nviewer_16285214164436634.render();\n});\n</script>",
+      "application/3dmoljs_load.v0": "<div id=\"3dmolviewer_16285350540933895\"  style=\"position: relative; width: 500px; height: 500px\">\n        <p id=\"3dmolwarning_16285350540933895\" style=\"background-color:#ffcccc;color:black\">You appear to be running in JupyterLab (or JavaScript failed to load for some other reason).  You need to install the 3dmol extension: <br>\n        <tt>jupyter labextension install jupyterlab_3dmol</tt></p>\n        </div>\n<script>\n\nvar loadScriptAsync = function(uri){\n  return new Promise((resolve, reject) => {\n    var tag = document.createElement('script');\n    tag.src = uri;\n    tag.async = true;\n    tag.onload = () => {\n      resolve();\n    };\n  var firstScriptTag = document.getElementsByTagName('script')[0];\n  firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);\n});\n};\n\nif(typeof $3Dmolpromise === 'undefined') {\n$3Dmolpromise = null;\n  $3Dmolpromise = loadScriptAsync('https://3dmol.org/build/3Dmol.js');\n}\n\nvar viewer_16285350540933895 = null;\nvar warn = document.getElementById(\"3dmolwarning_16285350540933895\");\nif(warn) {\n    warn.parentNode.removeChild(warn);\n}\n$3Dmolpromise.then(function() {\nviewer_16285350540933895 = $3Dmol.createViewer($(\"#3dmolviewer_16285350540933895\"),{backgroundColor:\"white\"});\nviewer_16285350540933895.zoomTo();\n\tviewer_16285350540933895.addModel(\"\\n     RDKit          3D\\n\\n 11 11  0  0  0  0  0  0  0  0999 V2000\\n    2.8508   -1.4199   -0.0778 Cl  0  0  0  0  0  0  0  0  0  0  0  0\\n    1.2420   -0.7129   -0.0368 C   0  0  0  0  0  0  0  0  0  0  0  0\\n    1.1554    0.6703    0.0072 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -0.1083    1.2220    0.0393 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -1.2200    0.3870    0.0264 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -1.1044   -0.9834   -0.0176 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -2.5043   -2.0515   -0.0342 Cl  0  0  0  0  0  0  0  0  0  0  0  0\\n    0.1336   -1.4994   -0.0482 N   0  0  0  0  0  0  0  0  0  0  0  0\\n    2.0310    1.3135    0.0168 H   0  0  0  0  0  0  0  0  0  0  0  0\\n   -0.2464    2.2902    0.0741 H   0  0  0  0  0  0  0  0  0  0  0  0\\n   -2.2295    0.7840    0.0507 H   0  0  0  0  0  0  0  0  0  0  0  0\\n  1  2  1  0\\n  2  3  2  0\\n  3  4  1  0\\n  4  5  2  0\\n  5  6  1  0\\n  6  7  1  0\\n  6  8  2  0\\n  8  2  1  0\\n  3  9  1  0\\n  4 10  1  0\\n  5 11  1  0\\nM  END\\n\",\"mol\");\n\tviewer_16285350540933895.addLabel(\"dichloropyridine26_q+0\",{\"position\": {\"x\": -6.89, \"y\": 0.75, \"z\": 0.35}, \"backgroundColor\": \"#999991\", \"backgroundOpacity\": 0.2});\n\tviewer_16285350540933895.setBackgroundColor(\"#999999\");\n\tviewer_16285350540933895.setStyle({\"stick\": {\"backgroundColor\": \"#000000\"}});\n\tviewer_16285350540933895.zoomTo();\n\tviewer_16285350540933895.render();\nviewer_16285350540933895.render();\n});\n</script>",
       "text/html": [
-       "<div id=\"3dmolviewer_16285214164436634\"  style=\"position: relative; width: 500px; height: 500px\">\n",
-       "        <p id=\"3dmolwarning_16285214164436634\" style=\"background-color:#ffcccc;color:black\">You appear to be running in JupyterLab (or JavaScript failed to load for some other reason).  You need to install the 3dmol extension: <br>\n",
+       "<div id=\"3dmolviewer_16285350540933895\"  style=\"position: relative; width: 500px; height: 500px\">\n",
+       "        <p id=\"3dmolwarning_16285350540933895\" style=\"background-color:#ffcccc;color:black\">You appear to be running in JupyterLab (or JavaScript failed to load for some other reason).  You need to install the 3dmol extension: <br>\n",
        "        <tt>jupyter labextension install jupyterlab_3dmol</tt></p>\n",
        "        </div>\n",
        "<script>\n",
@@ -94,18 +94,21 @@
        "  $3Dmolpromise = loadScriptAsync('https://3dmol.org/build/3Dmol.js');\n",
        "}\n",
        "\n",
-       "var viewer_16285214164436634 = null;\n",
-       "var warn = document.getElementById(\"3dmolwarning_16285214164436634\");\n",
+       "var viewer_16285350540933895 = null;\n",
+       "var warn = document.getElementById(\"3dmolwarning_16285350540933895\");\n",
        "if(warn) {\n",
        "    warn.parentNode.removeChild(warn);\n",
        "}\n",
        "$3Dmolpromise.then(function() {\n",
-       "viewer_16285214164436634 = $3Dmol.createViewer($(\"#3dmolviewer_16285214164436634\"),{backgroundColor:\"white\"});\n",
-       "viewer_16285214164436634.zoomTo();\n",
-       "\tviewer_16285214164436634.addModel(\"\\n     RDKit          3D\\n\\n 11 11  0  0  0  0  0  0  0  0999 V2000\\n   -2.6679   -1.8266    0.0837 Cl  0  0  0  0  0  0  0  0  0  0  0  0\\n   -1.1615   -0.9227    0.0349 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -1.1989    0.4599    0.0527 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -0.0327    1.2265    0.0157 C   0  0  0  0  0  0  0  0  0  0  0  0\\n    1.1826    0.5730   -0.0399 C   0  0  0  0  0  0  0  0  0  0  0  0\\n    1.1871   -0.8078   -0.0563 C   0  0  0  0  0  0  0  0  0  0  0  0\\n    2.7548   -1.5991   -0.1274 Cl  0  0  0  0  0  0  0  0  0  0  0  0\\n    0.0398   -1.5072   -0.0193 N   0  0  0  0  0  0  0  0  0  0  0  0\\n   -2.1586    0.9671    0.0965 H   0  0  0  0  0  0  0  0  0  0  0  0\\n   -0.0634    2.3142    0.0297 H   0  0  0  0  0  0  0  0  0  0  0  0\\n    2.1186    1.1227   -0.0703 H   0  0  0  0  0  0  0  0  0  0  0  0\\n  1  2  1  0\\n  2  3  2  0\\n  3  4  1  0\\n  4  5  2  0\\n  5  6  1  0\\n  6  7  1  0\\n  6  8  2  0\\n  8  2  1  0\\n  3  9  1  0\\n  4 10  1  0\\n  5 11  1  0\\nM  END\\n\",\"mol\");\n",
-       "\tviewer_16285214164436634.setStyle({\"stick\": {\"backgroundColor\": \"#000000\"}});\n",
-       "\tviewer_16285214164436634.zoomTo();\n",
-       "viewer_16285214164436634.render();\n",
+       "viewer_16285350540933895 = $3Dmol.createViewer($(\"#3dmolviewer_16285350540933895\"),{backgroundColor:\"white\"});\n",
+       "viewer_16285350540933895.zoomTo();\n",
+       "\tviewer_16285350540933895.addModel(\"\\n     RDKit          3D\\n\\n 11 11  0  0  0  0  0  0  0  0999 V2000\\n    2.8508   -1.4199   -0.0778 Cl  0  0  0  0  0  0  0  0  0  0  0  0\\n    1.2420   -0.7129   -0.0368 C   0  0  0  0  0  0  0  0  0  0  0  0\\n    1.1554    0.6703    0.0072 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -0.1083    1.2220    0.0393 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -1.2200    0.3870    0.0264 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -1.1044   -0.9834   -0.0176 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -2.5043   -2.0515   -0.0342 Cl  0  0  0  0  0  0  0  0  0  0  0  0\\n    0.1336   -1.4994   -0.0482 N   0  0  0  0  0  0  0  0  0  0  0  0\\n    2.0310    1.3135    0.0168 H   0  0  0  0  0  0  0  0  0  0  0  0\\n   -0.2464    2.2902    0.0741 H   0  0  0  0  0  0  0  0  0  0  0  0\\n   -2.2295    0.7840    0.0507 H   0  0  0  0  0  0  0  0  0  0  0  0\\n  1  2  1  0\\n  2  3  2  0\\n  3  4  1  0\\n  4  5  2  0\\n  5  6  1  0\\n  6  7  1  0\\n  6  8  2  0\\n  8  2  1  0\\n  3  9  1  0\\n  4 10  1  0\\n  5 11  1  0\\nM  END\\n\",\"mol\");\n",
+       "\tviewer_16285350540933895.addLabel(\"dichloropyridine26_q+0\",{\"position\": {\"x\": -6.89, \"y\": 0.75, \"z\": 0.35}, \"backgroundColor\": \"#999991\", \"backgroundOpacity\": 0.2});\n",
+       "\tviewer_16285350540933895.setBackgroundColor(\"#999999\");\n",
+       "\tviewer_16285350540933895.setStyle({\"stick\": {\"backgroundColor\": \"#000000\"}});\n",
+       "\tviewer_16285350540933895.zoomTo();\n",
+       "\tviewer_16285350540933895.render();\n",
+       "viewer_16285350540933895.render();\n",
        "});\n",
        "</script>"
       ]
@@ -123,7 +126,8 @@
    ],
    "source": [
     "loadInput = load_one('dichloropyridine26_q+0.fchk')\n",
-    "xyzName = 'dichloropyridine26_q+0.xyz' \n",
+    "xyzName = 'dichloropyridine26_q+0.xyz'\n",
+    "molName = xyzName[:-4]\n",
     "dump_one(loadInput, 'dichloropyridine26_q+0.xyz')\n",
     "xyz_files = glob.glob(xyzName)\n",
     "\n",
@@ -148,8 +152,13 @@
     "    molBlock = Chem.MolToMolBlock(mol) \n",
     "    view = py3Dmol.view(width=size[0], height=size[1])\n",
     "    view.addModel(molBlock, 'mol')\n",
+    "    \n",
+    "    view.addLabel(molName, {'position': {'x':-6.89, 'y':0.75, 'z':0.35}, 'backgroundColor': '#999991', 'backgroundOpacity': 0.2})\n",
+    "    view.setBackgroundColor('#999999')\n",
+    "\n",
     "    view.setStyle({style:{'backgroundColor':'#000000'}})\n",
     "    view.zoomTo()\n",
+    "    view.render()\n",
     "    return view\n",
     "\n",
     "def SmilesSetup(smiles): \n",
@@ -157,8 +166,7 @@
     "    if mol is not None: \n",
     "            mol = Chem.AddHs(mol)\n",
     "            AllChem.EmbedMolecule(mol)\n",
-    "            for atom in mol.GetAtoms():\n",
-    "                atom.SetProp(\"atomNote\", str(atom.GetIdx()))\n",
+    "\n",
     "            return mol\n",
     "    else:\n",
     "        return None \n",
@@ -193,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe1c03fe",
+   "id": "211079ed",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -201,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89f11aa8",
+   "id": "724ea263",
    "metadata": {},
    "outputs": [],
    "source": []
